# cosmolith

./: Cargo.toml  README.md
examples/: gnome.rs  kde.rs  niri.rs
src/: cli.rs  debug.rs  error.rs  event.rs  identifier.rs  lib.rs  main.rs  namespaces.rs
src/compositor/: compositor.rs  gnome.rs  hyprland.rs  input.rs  kde.rs  mod.rs  niri.rs  shortcut.rs  sway.rs
src/event/: input.rs  mod.rs  shortcuts.rs
src/watcher/: input.rs  mod.rs  shortcuts.rs
