[package]
name = "cosmolith"
version = "0.1.0"
edition = "2024"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", branch = "master" }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
cosmic-comp-config = { git = "https://github.com/pop-os/cosmic-comp" }
serde = "1.0.228"
clap = { version = "4.5.54", features = ["derive"] }
serde_json = "1.0"
treediff = { version = "5.0.0", features = ["with-serde-json"] }
