[package]
name = "cosmolith"
version = "0.1.0"
edition = "2024"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", branch = "master" }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
cosmic-comp-config = { git = "https://github.com/pop-os/cosmic-comp" }
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master", features = ["keyword"] }
thiserror = "2.0.18"
swayipc = "4.0.0"
zbus = "5.13.2"
gio = "0.21.5"
